fix (und fertig)

--- a/project/control_center/run_pipeline.ipynb
+++ b/project/control_center/run_pipeline.ipynb
@@ -37,8 +37,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-03T18:24:15.289661Z",
-     "start_time": "2024-03-03T18:23:59.943497Z"
+     "end_time": "2024-03-03T23:12:26.517826Z",
+     "start_time": "2024-03-03T23:11:31.777375Z"
     }
    },
    "execution_count": 1
@@ -72,8 +72,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-03T18:24:15.340141Z",
-     "start_time": "2024-03-03T18:24:15.293682Z"
+     "end_time": "2024-03-03T23:12:26.658410Z",
+     "start_time": "2024-03-03T23:12:26.528029Z"
     }
    },
    "execution_count": 2
@@ -92,8 +92,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-03T18:24:15.351218Z",
-     "start_time": "2024-03-03T18:24:15.344156Z"
+     "end_time": "2024-03-03T23:12:26.678554Z",
+     "start_time": "2024-03-03T23:12:26.666445Z"
     }
    },
    "outputs": [],
@@ -126,13 +126,16 @@
    "source": [
     "## Using the EUR-USD Exchange Rate data\n",
     "df = csv_reader(TESTDATA_DIR, 'eurusd_df', columns=['datetime', 'bid_close'])\n",
-    "print(df.head())"
+    "print(df.head())\n",
+    "\n",
+    "# For testng pipeline for now I use a small subset:\n",
+    "df = df.iloc[:10000, :]"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-03T18:24:15.631669Z",
-     "start_time": "2024-03-03T18:24:15.356233Z"
+     "end_time": "2024-03-03T23:12:27.430652Z",
+     "start_time": "2024-03-03T23:12:26.686593Z"
     }
    },
    "execution_count": 4
@@ -157,21 +160,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-03T18:24:15.640981Z",
-     "start_time": "2024-03-03T18:24:15.634683Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# # fyi: training takes about 9 min on complete dataset and 4.5 min on subset\n",
     "# target, covariates, individual_predictions, full_predictions, metrics_ranking = (\n",
     "#     run_pipeline(\n",
     "#         df=df, forecasting_models=FC_MODELS, ensemble_methods=ENS_METHODS, metrics=metrics, \n",
     "#         autosarimax_refit_interval=0.33,\n",
-    "#         indiv_init_train_ratio=0.3, ens_init_train_ratio=0.3,\n",
+    "#         forecast_init_train=0.3, ensemble_init_train=0.3,\n",
     "#         verbose=True\n",
     "#     )\n",
     "# )"
@@ -193,25 +190,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=======================\n",
-      "== Starting Pipeline ==\n",
-      "=======================\n",
+      "=================================================================================\n",
+      "Starting  Pipeline...\n",
       "\n",
       "=====================================================\n",
       "== Starting Step 1 in Pipeline: Data Preprocessing ==\n",
       "=====================================================\n",
+      "\n",
       "Searching for time information...\n",
       "Dates found in 'index' column!\n",
       "Inferred frequency: 15T\n",
-      "Data from goes from 2020-01-01 to 2024-02-06, resulting in 143713 observations.\n",
+      "Data from goes from 2020-01-01 to 2020-04-14, resulting in 10000 observations.\n",
       "\n",
-      "Aggregating data to frequency 'business day' using method last and dropping NaNs...\n",
-      "Loading aggregation function...\n",
-      "...finished! Data now has 1069 observations.\n",
+      "Aggregating data to frequency 'business day' using method 'last' and dropping NaNs...\n",
+      "...finished! Data now has 74 observations.\n",
       "\n",
       "Selecting target and covariates...\n",
       "Target: bid_close\n",
       "Covariates: None\n",
+      "\n",
       "Data Insight:\n",
       "            bid_close\n",
       "datetime             \n",
@@ -221,115 +218,119 @@
       "2020-01-07    1.11530\n",
       "2020-01-08    1.11124 \n",
       "\n",
-      "\n",
       "=======================================================\n",
       "== Starting Step 2 in Pipeline: Individual Forecasts ==\n",
       "=======================================================\n",
-      "Splitting data (train/test ratio: 30/70)...\n",
-      " Initial training set has 320 observations and goes from 2020-01-02 to 2021-03-24\n",
-      " There are 749 periods to be forecasted: 2021-03-25 to 2024-02-06\n",
+      "Splitting data (train/test ratio: 30/70)... \n",
+      "Initial training set has 22 observations and goes from 2020-01-02 to 2020-01-31 \n",
+      "There are 52 periods to be forecasted: 2020-02-03 to 2020-04-14\n",
       "\n",
-      "Now generating 749 one-step ahead expanding window predictions from model: Naive (sktime)\n",
+      "Now generating 52 one-step ahead expanding window predictions from model: Naive (sktime)\n",
+      "...finished!\n",
+      "Now generating 52 one-step ahead expanding window predictions from model: STL (sktime)\n",
+      "...finished!\n",
+      "Since no covariates are given, skipping covariate models \n",
+      "\n",
+      "Individual predictions finished!\n",
+      "\n",
+      "Exporting individual forecasts as csv...\n",
       "...finished!\n",
       "\n",
-      "Now generating 749 one-step ahead expanding window predictions from model: Naive (drift) (sktime)\n",
+      "Insights into models' predictions:\n",
+      "              Target    Naive       STL\n",
+      "Date                                  \n",
+      "2020-02-03  1.10618  1.10885  1.099680\n",
+      "2020-02-04  1.10440  1.10618  1.103271\n",
+      "2020-02-05  1.09994  1.10440  1.105145\n",
+      "2020-02-06  1.09802  1.09994  1.104768\n",
+      "2020-02-07  1.09486  1.09802  1.105307 \n",
+      "\n",
+      "\n",
+      "#############################################\n",
+      "## Step 3: Historical Ensemble Predictions ##\n",
+      "#############################################\n",
+      "\n",
+      "Splitting forecast data (n = 52) for ensemble forecasts (train/test ratio: 30/70)...\n",
+      "Initial training set has 15 observations and goes from 2020-02-03 to 2020-02-21\n",
+      "There are 37 periods to be forecasted by the individual models 2020-02-24 to 2020-04-14\n",
+      "\n",
+      "Performing Simple {'Simple': <function equal_weights at 0x0000022347CFC720>, 'Inverse RMSE': <function inv_rmse_weights at 0x0000022347CFF4C0>} expanding window forecasts...\n",
+      "Ensemble forecast 1 / 37\n",
+      "Ensemble forecast 20 / 37\n",
+      "Ensemble forecast 37 / 37\n",
       "...finished!\n",
       "\n",
-      "Now generating 749 one-step ahead expanding window predictions from model: AutoSARIMA (sktime)\n",
-      "Auto-fitting model...\n",
-      "AutoSARIMA forecast 1 / 749\n",
-      "AutoSARIMA forecast 10 / 749\n",
-      "AutoSARIMA forecast 20 / 749\n",
-      "AutoSARIMA forecast 30 / 749\n",
-      "AutoSARIMA forecast 40 / 749\n",
-      "AutoSARIMA forecast 50 / 749\n",
-      "AutoSARIMA forecast 60 / 749\n",
-      "AutoSARIMA forecast 70 / 749\n",
-      "AutoSARIMA forecast 80 / 749\n",
-      "AutoSARIMA forecast 90 / 749\n",
-      "AutoSARIMA forecast 100 / 749\n",
-      "AutoSARIMA forecast 110 / 749\n",
-      "AutoSARIMA forecast 120 / 749\n",
-      "AutoSARIMA forecast 130 / 749\n",
-      "AutoSARIMA forecast 140 / 749\n",
-      "AutoSARIMA forecast 150 / 749\n",
-      "AutoSARIMA forecast 160 / 749\n",
-      "AutoSARIMA forecast 170 / 749\n",
-      "AutoSARIMA forecast 180 / 749\n",
-      "AutoSARIMA forecast 190 / 749\n",
-      "AutoSARIMA forecast 200 / 749\n",
-      "AutoSARIMA forecast 210 / 749\n",
-      "AutoSARIMA forecast 220 / 749\n",
-      "AutoSARIMA forecast 230 / 749\n",
-      "AutoSARIMA forecast 240 / 749\n",
-      "...automatic refitting...\n",
-      "AutoSARIMA forecast 250 / 749\n",
-      "AutoSARIMA forecast 260 / 749\n",
-      "AutoSARIMA forecast 270 / 749\n",
-      "AutoSARIMA forecast 280 / 749\n",
-      "AutoSARIMA forecast 290 / 749\n",
-      "AutoSARIMA forecast 300 / 749\n",
-      "AutoSARIMA forecast 310 / 749\n",
-      "AutoSARIMA forecast 320 / 749\n",
-      "AutoSARIMA forecast 330 / 749\n",
-      "AutoSARIMA forecast 340 / 749\n",
-      "AutoSARIMA forecast 350 / 749\n",
-      "AutoSARIMA forecast 360 / 749\n",
-      "AutoSARIMA forecast 370 / 749\n",
-      "AutoSARIMA forecast 380 / 749\n",
-      "AutoSARIMA forecast 390 / 749\n",
-      "AutoSARIMA forecast 400 / 749\n",
-      "AutoSARIMA forecast 410 / 749\n",
-      "AutoSARIMA forecast 420 / 749\n",
-      "AutoSARIMA forecast 430 / 749\n",
-      "AutoSARIMA forecast 440 / 749\n",
-      "AutoSARIMA forecast 450 / 749\n",
-      "AutoSARIMA forecast 460 / 749\n",
-      "AutoSARIMA forecast 470 / 749\n",
-      "AutoSARIMA forecast 480 / 749\n",
-      "AutoSARIMA forecast 490 / 749\n",
-      "...automatic refitting...\n",
-      "AutoSARIMA forecast 500 / 749\n",
-      "AutoSARIMA forecast 510 / 749\n",
-      "AutoSARIMA forecast 520 / 749\n",
-      "AutoSARIMA forecast 530 / 749\n",
-      "AutoSARIMA forecast 540 / 749\n",
-      "AutoSARIMA forecast 550 / 749\n",
-      "AutoSARIMA forecast 560 / 749\n",
-      "AutoSARIMA forecast 570 / 749\n",
-      "AutoSARIMA forecast 580 / 749\n",
-      "AutoSARIMA forecast 590 / 749\n",
-      "AutoSARIMA forecast 600 / 749\n",
-      "AutoSARIMA forecast 610 / 749\n",
-      "AutoSARIMA forecast 620 / 749\n",
-      "AutoSARIMA forecast 630 / 749\n",
-      "AutoSARIMA forecast 640 / 749\n",
-      "AutoSARIMA forecast 650 / 749\n",
-      "AutoSARIMA forecast 660 / 749\n",
-      "AutoSARIMA forecast 670 / 749\n"
+      "Performing Inverse RMSE {'Simple': <function equal_weights at 0x0000022347CFC720>, 'Inverse RMSE': <function inv_rmse_weights at 0x0000022347CFF4C0>} expanding window forecasts...\n",
+      "Ensemble forecast 1 / 37\n",
+      "Ensemble forecast 20 / 37\n",
+      "Ensemble forecast 37 / 37\n",
+      "...finished!\n",
+      "\n",
+      "Ensemble predictions finished!\n",
+      "\n",
+      "Insights into ensembles' predictions:\n",
+      "             Ens: Simple (weighted)  Ens: Inverse RMSE (weighted)\n",
+      "Date                                                            \n",
+      "2020-02-24                1.081134                      1.081733\n",
+      "2020-02-25                1.082085                      1.082764\n",
+      "2020-02-26                1.085062                      1.085843\n",
+      "2020-02-27                1.085866                      1.086655\n",
+      "2020-02-28                1.096304                      1.097140\n",
+      "\n",
+      "Merging...\n",
+      "\n",
+      "Exporting ensemble forecasts as csv...\n",
+      "...finished!\n",
+      "\n",
+      "############################################\n",
+      "## Step 4: Creating Metrics Ranking Table ##\n",
+      "############################################\n",
+      "\n",
+      "Calculating MAPE, RMSE, SMAPE per model...\n",
+      "Ranking models ...\n",
+      "\n",
+      "Exporting metrics ranking as csv...\n",
+      "...finished!\n",
+      "\n",
+      "\n",
+      " Results:\n",
+      "                           Model      MAPE      RMSE     SMAPE  MAPE Ranking  \\\n",
+      "0                         Naive  0.604318  0.008753  0.402667             1   \n",
+      "1  Ens: Inverse RMSE (weighted)  0.816708  0.011273  0.544612             2   \n",
+      "2        Ens: Simple (weighted)  0.904869  0.012397  0.603531             3   \n",
+      "3                           STL  1.288438  0.017665  0.859981             4   \n",
+      "\n",
+      "   RMSE Ranking  SMAPE Ranking  \n",
+      "0             1              1  \n",
+      "1             2              2  \n",
+      "2             3              3  \n",
+      "3             4              4  \n",
+      "\n",
+      "Finished Pipeline!\n",
+      "=================================================================================\n"
      ]
     }
    ],
    "source": [
-    "# fyi: training takes about 9 min on complete dataset and 4.5 min on subset\n",
     "target, covariates, individual_predictions, full_predictions, metrics_ranking = (\n",
     "    run_pipeline(\n",
     "        df=df, forecasting_models=FC_MODELS, ensemble_methods=ENS_METHODS, metrics=metrics, \n",
     "        agg_method='last', agg_freq='B',\n",
-    "        indiv_init_train_ratio=0.3, ens_init_train_ratio=0.3,\n",
+    "        forecast_init_train=0.3, ensemble_init_train=0.3,\n",
     "        autosarimax_refit_interval=0.33,\n",
+    "        select_individual_models=['Naive', 'STL'], select_ensemble_methods=['Simple', 'Inverse RMSE'],\n",
     "        verbose=True\n",
     "    )\n",
     ")"
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
-     "start_time": "2024-03-03T18:24:15.643992Z"
+     "end_time": "2024-03-03T23:16:51.806408Z",
+     "start_time": "2024-03-03T23:12:47.506435Z"
     }
    },
-   "execution_count": null
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -343,9 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "is_executing": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "display(metrics_ranking.style.hide())"
