--- a/project/control_center/run_pipeline.ipynb
+++ b/project/control_center/run_pipeline.ipynb
@@ -37,8 +37,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-03T23:12:26.517826Z",
-     "start_time": "2024-03-03T23:11:31.777375Z"
+     "end_time": "2024-03-04T02:09:14.079366Z",
+     "start_time": "2024-03-04T02:08:58.608981Z"
     }
    },
    "execution_count": 1
@@ -72,8 +72,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-03T23:12:26.658410Z",
-     "start_time": "2024-03-03T23:12:26.528029Z"
+     "end_time": "2024-03-04T02:09:14.129465Z",
+     "start_time": "2024-03-04T02:09:14.082377Z"
     }
    },
    "execution_count": 2
@@ -92,8 +92,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-03T23:12:26.678554Z",
-     "start_time": "2024-03-03T23:12:26.666445Z"
+     "end_time": "2024-03-04T02:09:14.140134Z",
+     "start_time": "2024-03-04T02:09:14.132478Z"
     }
    },
    "outputs": [],
@@ -134,8 +134,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-03T23:12:27.430652Z",
-     "start_time": "2024-03-03T23:12:26.686593Z"
+     "end_time": "2024-03-04T02:09:14.426480Z",
+     "start_time": "2024-03-04T02:09:14.144147Z"
     }
    },
    "execution_count": 4
@@ -160,8 +160,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-04T02:09:14.434557Z",
+     "start_time": "2024-03-04T02:09:14.428490Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# target, covariates, individual_predictions, full_predictions, metrics_ranking = (\n",
@@ -185,132 +190,7 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=================================================================================\n",
-      "Starting  Pipeline...\n",
-      "\n",
-      "=====================================================\n",
-      "== Starting Step 1 in Pipeline: Data Preprocessing ==\n",
-      "=====================================================\n",
-      "\n",
-      "Searching for time information...\n",
-      "Dates found in 'index' column!\n",
-      "Inferred frequency: 15T\n",
-      "Data from goes from 2020-01-01 to 2020-04-14, resulting in 10000 observations.\n",
-      "\n",
-      "Aggregating data to frequency 'business day' using method 'last' and dropping NaNs...\n",
-      "...finished! Data now has 74 observations.\n",
-      "\n",
-      "Selecting target and covariates...\n",
-      "Target: bid_close\n",
-      "Covariates: None\n",
-      "\n",
-      "Data Insight:\n",
-      "            bid_close\n",
-      "datetime             \n",
-      "2020-01-02    1.11702\n",
-      "2020-01-03    1.11599\n",
-      "2020-01-06    1.11948\n",
-      "2020-01-07    1.11530\n",
-      "2020-01-08    1.11124 \n",
-      "\n",
-      "=======================================================\n",
-      "== Starting Step 2 in Pipeline: Individual Forecasts ==\n",
-      "=======================================================\n",
-      "Splitting data (train/test ratio: 30/70)... \n",
-      "Initial training set has 22 observations and goes from 2020-01-02 to 2020-01-31 \n",
-      "There are 52 periods to be forecasted: 2020-02-03 to 2020-04-14\n",
-      "\n",
-      "Now generating 52 one-step ahead expanding window predictions from model: Naive (sktime)\n",
-      "...finished!\n",
-      "Now generating 52 one-step ahead expanding window predictions from model: STL (sktime)\n",
-      "...finished!\n",
-      "Since no covariates are given, skipping covariate models \n",
-      "\n",
-      "Individual predictions finished!\n",
-      "\n",
-      "Exporting individual forecasts as csv...\n",
-      "...finished!\n",
-      "\n",
-      "Insights into models' predictions:\n",
-      "              Target    Naive       STL\n",
-      "Date                                  \n",
-      "2020-02-03  1.10618  1.10885  1.099680\n",
-      "2020-02-04  1.10440  1.10618  1.103271\n",
-      "2020-02-05  1.09994  1.10440  1.105145\n",
-      "2020-02-06  1.09802  1.09994  1.104768\n",
-      "2020-02-07  1.09486  1.09802  1.105307 \n",
-      "\n",
-      "\n",
-      "#############################################\n",
-      "## Step 3: Historical Ensemble Predictions ##\n",
-      "#############################################\n",
-      "\n",
-      "Splitting forecast data (n = 52) for ensemble forecasts (train/test ratio: 30/70)...\n",
-      "Initial training set has 15 observations and goes from 2020-02-03 to 2020-02-21\n",
-      "There are 37 periods to be forecasted by the individual models 2020-02-24 to 2020-04-14\n",
-      "\n",
-      "Performing Simple {'Simple': <function equal_weights at 0x0000022347CFC720>, 'Inverse RMSE': <function inv_rmse_weights at 0x0000022347CFF4C0>} expanding window forecasts...\n",
-      "Ensemble forecast 1 / 37\n",
-      "Ensemble forecast 20 / 37\n",
-      "Ensemble forecast 37 / 37\n",
-      "...finished!\n",
-      "\n",
-      "Performing Inverse RMSE {'Simple': <function equal_weights at 0x0000022347CFC720>, 'Inverse RMSE': <function inv_rmse_weights at 0x0000022347CFF4C0>} expanding window forecasts...\n",
-      "Ensemble forecast 1 / 37\n",
-      "Ensemble forecast 20 / 37\n",
-      "Ensemble forecast 37 / 37\n",
-      "...finished!\n",
-      "\n",
-      "Ensemble predictions finished!\n",
-      "\n",
-      "Insights into ensembles' predictions:\n",
-      "             Ens: Simple (weighted)  Ens: Inverse RMSE (weighted)\n",
-      "Date                                                            \n",
-      "2020-02-24                1.081134                      1.081733\n",
-      "2020-02-25                1.082085                      1.082764\n",
-      "2020-02-26                1.085062                      1.085843\n",
-      "2020-02-27                1.085866                      1.086655\n",
-      "2020-02-28                1.096304                      1.097140\n",
-      "\n",
-      "Merging...\n",
-      "\n",
-      "Exporting ensemble forecasts as csv...\n",
-      "...finished!\n",
-      "\n",
-      "############################################\n",
-      "## Step 4: Creating Metrics Ranking Table ##\n",
-      "############################################\n",
-      "\n",
-      "Calculating MAPE, RMSE, SMAPE per model...\n",
-      "Ranking models ...\n",
-      "\n",
-      "Exporting metrics ranking as csv...\n",
-      "...finished!\n",
-      "\n",
-      "\n",
-      " Results:\n",
-      "                           Model      MAPE      RMSE     SMAPE  MAPE Ranking  \\\n",
-      "0                         Naive  0.604318  0.008753  0.402667             1   \n",
-      "1  Ens: Inverse RMSE (weighted)  0.816708  0.011273  0.544612             2   \n",
-      "2        Ens: Simple (weighted)  0.904869  0.012397  0.603531             3   \n",
-      "3                           STL  1.288438  0.017665  0.859981             4   \n",
-      "\n",
-      "   RMSE Ranking  SMAPE Ranking  \n",
-      "0             1              1  \n",
-      "1             2              2  \n",
-      "2             3              3  \n",
-      "3             4              4  \n",
-      "\n",
-      "Finished Pipeline!\n",
-      "=================================================================================\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "target, covariates, individual_predictions, full_predictions, metrics_ranking = (\n",
     "    run_pipeline(\n",
@@ -326,11 +206,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-03T23:16:51.806408Z",
-     "start_time": "2024-03-03T23:12:47.506435Z"
+     "end_time": "2024-03-04T02:11:41.894067Z",
+     "start_time": "2024-03-04T02:11:34.833857Z"
     }
    },
-   "execution_count": 10
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -343,9 +223,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-04T02:09:21.292757Z",
+     "start_time": "2024-03-04T02:09:21.119764Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<pandas.io.formats.style.Styler at 0x1f8a1829790>",
+      "text/html": "<style type=\"text/css\">\n</style>\n<table id=\"T_df2a2\">\n  <thead>\n    <tr>\n      <th id=\"T_df2a2_level0_col0\" class=\"col_heading level0 col0\" >Model</th>\n      <th id=\"T_df2a2_level0_col1\" class=\"col_heading level0 col1\" >MAPE</th>\n      <th id=\"T_df2a2_level0_col2\" class=\"col_heading level0 col2\" >RMSE</th>\n      <th id=\"T_df2a2_level0_col3\" class=\"col_heading level0 col3\" >SMAPE</th>\n      <th id=\"T_df2a2_level0_col4\" class=\"col_heading level0 col4\" >MAPE Ranking</th>\n      <th id=\"T_df2a2_level0_col5\" class=\"col_heading level0 col5\" >RMSE Ranking</th>\n      <th id=\"T_df2a2_level0_col6\" class=\"col_heading level0 col6\" >SMAPE Ranking</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_df2a2_row0_col0\" class=\"data row0 col0\" >Naive</td>\n      <td id=\"T_df2a2_row0_col1\" class=\"data row0 col1\" >0.604318</td>\n      <td id=\"T_df2a2_row0_col2\" class=\"data row0 col2\" >0.008753</td>\n      <td id=\"T_df2a2_row0_col3\" class=\"data row0 col3\" >0.402667</td>\n      <td id=\"T_df2a2_row0_col4\" class=\"data row0 col4\" >1</td>\n      <td id=\"T_df2a2_row0_col5\" class=\"data row0 col5\" >1</td>\n      <td id=\"T_df2a2_row0_col6\" class=\"data row0 col6\" >1</td>\n    </tr>\n    <tr>\n      <td id=\"T_df2a2_row1_col0\" class=\"data row1 col0\" >Weighted Ensemble: Inverse RMSE</td>\n      <td id=\"T_df2a2_row1_col1\" class=\"data row1 col1\" >0.816708</td>\n      <td id=\"T_df2a2_row1_col2\" class=\"data row1 col2\" >0.011273</td>\n      <td id=\"T_df2a2_row1_col3\" class=\"data row1 col3\" >0.544612</td>\n      <td id=\"T_df2a2_row1_col4\" class=\"data row1 col4\" >2</td>\n      <td id=\"T_df2a2_row1_col5\" class=\"data row1 col5\" >2</td>\n      <td id=\"T_df2a2_row1_col6\" class=\"data row1 col6\" >2</td>\n    </tr>\n    <tr>\n      <td id=\"T_df2a2_row2_col0\" class=\"data row2 col0\" >Weighted Ensemble: Simple</td>\n      <td id=\"T_df2a2_row2_col1\" class=\"data row2 col1\" >0.904869</td>\n      <td id=\"T_df2a2_row2_col2\" class=\"data row2 col2\" >0.012397</td>\n      <td id=\"T_df2a2_row2_col3\" class=\"data row2 col3\" >0.603531</td>\n      <td id=\"T_df2a2_row2_col4\" class=\"data row2 col4\" >3</td>\n      <td id=\"T_df2a2_row2_col5\" class=\"data row2 col5\" >3</td>\n      <td id=\"T_df2a2_row2_col6\" class=\"data row2 col6\" >3</td>\n    </tr>\n    <tr>\n      <td id=\"T_df2a2_row3_col0\" class=\"data row3 col0\" >STL</td>\n      <td id=\"T_df2a2_row3_col1\" class=\"data row3 col1\" >1.288438</td>\n      <td id=\"T_df2a2_row3_col2\" class=\"data row3 col2\" >0.017665</td>\n      <td id=\"T_df2a2_row3_col3\" class=\"data row3 col3\" >0.859981</td>\n      <td id=\"T_df2a2_row3_col4\" class=\"data row3 col4\" >4</td>\n      <td id=\"T_df2a2_row3_col5\" class=\"data row3 col5\" >4</td>\n      <td id=\"T_df2a2_row3_col6\" class=\"data row3 col6\" >4</td>\n    </tr>\n  </tbody>\n</table>\n"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(metrics_ranking.style.hide())"
    ]
