eur usd pipeline update

--- a/project/notebooks/Pipeline_eurusd.ipynb
+++ b/project/notebooks/Pipeline_eurusd.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -350,70 +350,70 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_6d19e\">\n",
+       "<table id=\"T_bde49\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_6d19e_level0_col0\" class=\"col_heading level0 col0\" >Model</th>\n",
-       "      <th id=\"T_6d19e_level0_col1\" class=\"col_heading level0 col1\" >MAE</th>\n",
-       "      <th id=\"T_6d19e_level0_col2\" class=\"col_heading level0 col2\" >RMSE</th>\n",
-       "      <th id=\"T_6d19e_level0_col3\" class=\"col_heading level0 col3\" >MAPE</th>\n",
-       "      <th id=\"T_6d19e_level0_col4\" class=\"col_heading level0 col4\" >sMAPE</th>\n",
-       "      <th id=\"T_6d19e_level0_col5\" class=\"col_heading level0 col5\" >MAE Ranking</th>\n",
-       "      <th id=\"T_6d19e_level0_col6\" class=\"col_heading level0 col6\" >RMSE Ranking</th>\n",
-       "      <th id=\"T_6d19e_level0_col7\" class=\"col_heading level0 col7\" >MAPE Ranking</th>\n",
-       "      <th id=\"T_6d19e_level0_col8\" class=\"col_heading level0 col8\" >sMAPE Ranking</th>\n",
+       "      <th id=\"T_bde49_level0_col0\" class=\"col_heading level0 col0\" >Model</th>\n",
+       "      <th id=\"T_bde49_level0_col1\" class=\"col_heading level0 col1\" >MAE</th>\n",
+       "      <th id=\"T_bde49_level0_col2\" class=\"col_heading level0 col2\" >RMSE</th>\n",
+       "      <th id=\"T_bde49_level0_col3\" class=\"col_heading level0 col3\" >MAPE</th>\n",
+       "      <th id=\"T_bde49_level0_col4\" class=\"col_heading level0 col4\" >sMAPE</th>\n",
+       "      <th id=\"T_bde49_level0_col5\" class=\"col_heading level0 col5\" >MAE Ranking</th>\n",
+       "      <th id=\"T_bde49_level0_col6\" class=\"col_heading level0 col6\" >RMSE Ranking</th>\n",
+       "      <th id=\"T_bde49_level0_col7\" class=\"col_heading level0 col7\" >MAPE Ranking</th>\n",
+       "      <th id=\"T_bde49_level0_col8\" class=\"col_heading level0 col8\" >sMAPE Ranking</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_6d19e_row0_col0\" class=\"data row0 col0\" >Naive</td>\n",
-       "      <td id=\"T_6d19e_row0_col1\" class=\"data row0 col1\" >0.007</td>\n",
-       "      <td id=\"T_6d19e_row0_col2\" class=\"data row0 col2\" >0.009</td>\n",
-       "      <td id=\"T_6d19e_row0_col3\" class=\"data row0 col3\" >0.006</td>\n",
-       "      <td id=\"T_6d19e_row0_col4\" class=\"data row0 col4\" >0.403</td>\n",
-       "      <td id=\"T_6d19e_row0_col5\" class=\"data row0 col5\" >1</td>\n",
-       "      <td id=\"T_6d19e_row0_col6\" class=\"data row0 col6\" >1</td>\n",
-       "      <td id=\"T_6d19e_row0_col7\" class=\"data row0 col7\" >1</td>\n",
-       "      <td id=\"T_6d19e_row0_col8\" class=\"data row0 col8\" >1</td>\n",
+       "      <td id=\"T_bde49_row0_col0\" class=\"data row0 col0\" >Naive</td>\n",
+       "      <td id=\"T_bde49_row0_col1\" class=\"data row0 col1\" >0.007</td>\n",
+       "      <td id=\"T_bde49_row0_col2\" class=\"data row0 col2\" >0.009</td>\n",
+       "      <td id=\"T_bde49_row0_col3\" class=\"data row0 col3\" >0.006</td>\n",
+       "      <td id=\"T_bde49_row0_col4\" class=\"data row0 col4\" >0.403</td>\n",
+       "      <td id=\"T_bde49_row0_col5\" class=\"data row0 col5\" >1</td>\n",
+       "      <td id=\"T_bde49_row0_col6\" class=\"data row0 col6\" >1</td>\n",
+       "      <td id=\"T_bde49_row0_col7\" class=\"data row0 col7\" >1</td>\n",
+       "      <td id=\"T_bde49_row0_col8\" class=\"data row0 col8\" >1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_6d19e_row1_col0\" class=\"data row1 col0\" >Weighted Ensemble: Inverse RMSE</td>\n",
-       "      <td id=\"T_6d19e_row1_col1\" class=\"data row1 col1\" >0.009</td>\n",
-       "      <td id=\"T_6d19e_row1_col2\" class=\"data row1 col2\" >0.011</td>\n",
-       "      <td id=\"T_6d19e_row1_col3\" class=\"data row1 col3\" >0.008</td>\n",
-       "      <td id=\"T_6d19e_row1_col4\" class=\"data row1 col4\" >0.545</td>\n",
-       "      <td id=\"T_6d19e_row1_col5\" class=\"data row1 col5\" >2</td>\n",
-       "      <td id=\"T_6d19e_row1_col6\" class=\"data row1 col6\" >2</td>\n",
-       "      <td id=\"T_6d19e_row1_col7\" class=\"data row1 col7\" >2</td>\n",
-       "      <td id=\"T_6d19e_row1_col8\" class=\"data row1 col8\" >2</td>\n",
+       "      <td id=\"T_bde49_row1_col0\" class=\"data row1 col0\" >Weighted Ensemble: Inverse RMSE</td>\n",
+       "      <td id=\"T_bde49_row1_col1\" class=\"data row1 col1\" >0.009</td>\n",
+       "      <td id=\"T_bde49_row1_col2\" class=\"data row1 col2\" >0.011</td>\n",
+       "      <td id=\"T_bde49_row1_col3\" class=\"data row1 col3\" >0.008</td>\n",
+       "      <td id=\"T_bde49_row1_col4\" class=\"data row1 col4\" >0.545</td>\n",
+       "      <td id=\"T_bde49_row1_col5\" class=\"data row1 col5\" >2</td>\n",
+       "      <td id=\"T_bde49_row1_col6\" class=\"data row1 col6\" >2</td>\n",
+       "      <td id=\"T_bde49_row1_col7\" class=\"data row1 col7\" >2</td>\n",
+       "      <td id=\"T_bde49_row1_col8\" class=\"data row1 col8\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_6d19e_row2_col0\" class=\"data row2 col0\" >Weighted Ensemble: Simple</td>\n",
-       "      <td id=\"T_6d19e_row2_col1\" class=\"data row2 col1\" >0.010</td>\n",
-       "      <td id=\"T_6d19e_row2_col2\" class=\"data row2 col2\" >0.012</td>\n",
-       "      <td id=\"T_6d19e_row2_col3\" class=\"data row2 col3\" >0.009</td>\n",
-       "      <td id=\"T_6d19e_row2_col4\" class=\"data row2 col4\" >0.604</td>\n",
-       "      <td id=\"T_6d19e_row2_col5\" class=\"data row2 col5\" >3</td>\n",
-       "      <td id=\"T_6d19e_row2_col6\" class=\"data row2 col6\" >3</td>\n",
-       "      <td id=\"T_6d19e_row2_col7\" class=\"data row2 col7\" >3</td>\n",
-       "      <td id=\"T_6d19e_row2_col8\" class=\"data row2 col8\" >3</td>\n",
+       "      <td id=\"T_bde49_row2_col0\" class=\"data row2 col0\" >Weighted Ensemble: Simple</td>\n",
+       "      <td id=\"T_bde49_row2_col1\" class=\"data row2 col1\" >0.010</td>\n",
+       "      <td id=\"T_bde49_row2_col2\" class=\"data row2 col2\" >0.012</td>\n",
+       "      <td id=\"T_bde49_row2_col3\" class=\"data row2 col3\" >0.009</td>\n",
+       "      <td id=\"T_bde49_row2_col4\" class=\"data row2 col4\" >0.604</td>\n",
+       "      <td id=\"T_bde49_row2_col5\" class=\"data row2 col5\" >3</td>\n",
+       "      <td id=\"T_bde49_row2_col6\" class=\"data row2 col6\" >3</td>\n",
+       "      <td id=\"T_bde49_row2_col7\" class=\"data row2 col7\" >3</td>\n",
+       "      <td id=\"T_bde49_row2_col8\" class=\"data row2 col8\" >3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_6d19e_row3_col0\" class=\"data row3 col0\" >STL</td>\n",
-       "      <td id=\"T_6d19e_row3_col1\" class=\"data row3 col1\" >0.014</td>\n",
-       "      <td id=\"T_6d19e_row3_col2\" class=\"data row3 col2\" >0.018</td>\n",
-       "      <td id=\"T_6d19e_row3_col3\" class=\"data row3 col3\" >0.013</td>\n",
-       "      <td id=\"T_6d19e_row3_col4\" class=\"data row3 col4\" >0.860</td>\n",
-       "      <td id=\"T_6d19e_row3_col5\" class=\"data row3 col5\" >4</td>\n",
-       "      <td id=\"T_6d19e_row3_col6\" class=\"data row3 col6\" >4</td>\n",
-       "      <td id=\"T_6d19e_row3_col7\" class=\"data row3 col7\" >4</td>\n",
-       "      <td id=\"T_6d19e_row3_col8\" class=\"data row3 col8\" >4</td>\n",
+       "      <td id=\"T_bde49_row3_col0\" class=\"data row3 col0\" >STL</td>\n",
+       "      <td id=\"T_bde49_row3_col1\" class=\"data row3 col1\" >0.014</td>\n",
+       "      <td id=\"T_bde49_row3_col2\" class=\"data row3 col2\" >0.018</td>\n",
+       "      <td id=\"T_bde49_row3_col3\" class=\"data row3 col3\" >0.013</td>\n",
+       "      <td id=\"T_bde49_row3_col4\" class=\"data row3 col4\" >0.860</td>\n",
+       "      <td id=\"T_bde49_row3_col5\" class=\"data row3 col5\" >4</td>\n",
+       "      <td id=\"T_bde49_row3_col6\" class=\"data row3 col6\" >4</td>\n",
+       "      <td id=\"T_bde49_row3_col7\" class=\"data row3 col7\" >4</td>\n",
+       "      <td id=\"T_bde49_row3_col8\" class=\"data row3 col8\" >4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x2d98e7cd650>"
+       "<pandas.io.formats.style.Styler at 0x2d99012cc50>"
       ]
      },
      "metadata": {},
@@ -431,7 +431,7 @@
     "    return val\n",
     "formatted_metrics = output_dict['metrics ranking'].applymap(format_numeric)\n",
     "\n",
-    "display(formatted_metrics.style.hide())"
+    "display(formatted_metrics.style.hide())\n"
    ]
   },
   {
