adding code for latex table generation

--- a/paper/analysis/plots/plot_metrics.ipynb
+++ b/paper/analysis/plots/plot_metrics.ipynb
@@ -29,9 +29,6 @@
     }
    ],
    "source": [
-    "import os.path\n",
-    "\n",
-    "from src.utils.paths import *\n",
     "from src.utils import pull_results, plot_metrics"
    ]
   },
@@ -56,8 +53,8 @@
     }
    ],
    "source": [
-    "timestamp = \"20240712_2211\"\n",
-    "pull_results(timestamp=timestamp, file_prefix=\"noisy_simdata_compl\")  # Comment out this code if data did not change."
+    "# timestamp = \"20240712_2211\"\n",
+    "# pull_results(timestamp=timestamp, file_prefix=\"noisy_simdata_compl\")  # Comment out this code if data did not change."
    ],
    "metadata": {
     "collapsed": false,
