providing code for descriptive table

--- a/paper/analysis/tables/metrics_table.ipynb
+++ b/paper/analysis/tables/metrics_table.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "from src.utils import pull_results\n",
+    "from src.utils import pull_results, latex_exporter\n",
     "from src.utils.paths import *"
    ]
   },
@@ -245,20 +245,14 @@
     }
    ],
    "source": [
-    "def latex_printer(df):\n",
-    "    latex_output = df.style.to_latex(\n",
-    "        hrules=True,\n",
-    "        caption=f\"Ranking Forecasters and Ensemblers by Predictive Performance - Data Complexity: {i + 1}\"\n",
-    "    )\n",
-    "    return latex_output\n",
-    "\n",
     "for i, df in enumerate(df_list):\n",
+    "    caption = f\"Ranking Forecasters and Ensemblers by Predictive Performance - Data Complexity: {i + 1}\"\n",
     "    print(f\"Table for Complexity {i+1}\\n\")\n",
-    "    print(latex_printer(df))\n",
+    "    print(latex_exporter(df, caption=caption))\n",
     "    print(\"\\n\")\n",
     "    \n",
     "    with open(f\"metrics_ranking_compl{i+1}.tex\", \"w\") as f:\n",
-    "        f.write(latex_printer(df))"
+    "        f.write(latex_exporter(df, caption=caption))"
    ],
    "metadata": {
     "collapsed": false,
